backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-deploy
spec:
  selector:
    matchLabels:
      app: backend-pod
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend-pod
    spec:
      containers:
        - name: backend-pod
          image: abuzarmadki09/devops-project-2-backend
          ports:
            - containerPort: 80
  replicas: 2
