db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: db-deploy
spec:
  selector:
    matchLabels:
      app: db-pod
  template:
    metadata:
      name: db-pod
      labels:
        app: db-pod
    spec:
      containers:
        - name: db-pod
          image: mongo
          ports:
            - containerPort: 27017
  replicas: 1
