db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 27017
      port: 27017
  selector:
    app: db-pod
