frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  type: ClusterIP
  ports:
    - name: front-svc-prt
      targetPort: 3000
      port: 80
  selector:
    app: frontend-pod
